WIP trying to make ImmutableOpenMap a Map